--- a/food.html
+++ b/food.html
@@ -15,12 +15,18 @@
 </header>
 
 <section class="card-container">
-<a href="vendor.html?vendor=rest1" class="card">Susma Dhaba</a>
-<a href="vendor.html?vendor=rest2" class="card">Yadav Restaurent</a>
-<a href="vendor.html?vendor=home1" class="card">Maa ki Rasoi</a>
-<a href="vendor.html?vendor=home2" class="card">Home Vendor (Manish)</a>
-<a href="vendor.html?vendor=home3" class="card">Home Vendor (Sayli)</a>
+<a href="vendor.html?vendor=rest1" class="card">
+    <img src="images/susma.jpeg" alt="Susma Dhaba"><h3>Susma Dhaba</h3></a>
+<a href="vendor.html?vendor=rest2" class="card">
+    <img src="images/yadav.jpeg" alt="Yadav Restaurent"><h3>Yadav Restaurent</h3></a>
+<a href="vendor.html?vendor=home1" class="card">
+    <img src="images/mri.jpeg" alt="Maa ki Rasoi"><h3>Maa ki Rasoi</h3></a>
+<a href="vendor.html?vendor=home2" class="card">
+    <img src="images/m.jpeg" alt="Manish"><h3>Home Vendor (Manish)</h3></a>
+<a href="vendor.html?vendor=home3" class="card">
+    <img src="images/sh.jpeg" alt="Sayli"><h3>Home Vendor (Sayli)</h3></a>
 </section>
 
 </body>
 </html>
+
